feat: implement 0.6.0 passkey + api key v2
